--- a/PladooDraw/PladooDraw.vcxproj
+++ b/PladooDraw/PladooDraw.vcxproj
@@ -166,6 +166,13 @@
     </MASM>
   </ItemGroup>
   <ItemGroup>
+    <None Include="..\Release\cursors\brush.cur" />
+    <None Include="..\Release\cursors\bucket.cur" />
+    <None Include="..\Release\cursors\ellipse.cur" />
+    <None Include="..\Release\cursors\eraser.cur" />
+    <None Include="..\Release\cursors\line.cur" />
+    <None Include="..\Release\cursors\move.cur" />
+    <None Include="..\Release\cursors\rectangle.cur" />
     <None Include="resource_cursors.inc" />
     <None Include="resource_icons.inc" />
   </ItemGroup>
@@ -177,6 +184,14 @@
   </ItemGroup>
   <ItemGroup>
     <Image Include="..\..\..\..\Downloads\PladooDraw.ico" />
+    <Image Include="icons\brush.ico" />
+    <Image Include="icons\ellipse.ico" />
+    <Image Include="icons\eraser.ico" />
+    <Image Include="icons\line.ico" />
+    <Image Include="icons\move.ico" />
+    <Image Include="icons\paint_bucket.ico" />
+    <Image Include="icons\rectangle.ico" />
+    <Image Include="icons\text.ico" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
